[package]
name = "openslide-sys"
edition = "2021"
version = "1.0.7"
authors = ["AzHicham <hicham.azimani1@gmail.com>"]
description = "Low-level bindings to the openslide library"
repository = "https://github.com/AzHicham/openslide-sys"
homepage = "https://github.com/AzHicham/openslide-sys"
readme = "README.md"
keywords = ["FFI", "bindings", "openslide"]
categories = ["external-ffi-bindings"]
license = "MIT/Apache-2.0"
build = "build.rs"
rust-version = "1.82.0"

[features]
default = []
dynamic-link = []

[dependencies]

[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3"
