[package]
name = "openslide-sys"
edition = "2021"
version = "1.0.8"
authors = ["AzHicham <hicham.azimani1@gmail.com>"]
description = "Low-level bindings to the openslide library"
repository = "https://github.com/AzHicham/openslide-sys"
homepage = "https://github.com/AzHicham/openslide-sys"
readme = "README.md"
keywords = ["FFI", "bindings", "openslide"]
categories = ["external-ffi-bindings"]
license = "MIT/Apache-2.0"
build = "build.rs"
rust-version = "1.82.0"

[features]
default = []
dynamic-link = []

[dependencies]

[build-dependencies]
[build-dependencies.bindgen]
version = "0.72"
default-features = false
features = ["runtime"]

[build-dependencies.pkg-config]
version = "0.3"
default-features = false
features = []
